Schema defined for food_items and macro_tables

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 *.iml
 .gradle
+build-android-apk.sh
+pair-wifi.sh
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -13,3 +15,6 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.gradle
+/.idea
+/.vscode
